# series-rust

./: Cargo.toml  Changes.md  Readme.md
benches/: benchmarks.rs
src/: inner_series.rs  karatsuba.rs  lib.rs  ops.rs  poly.rs  poly_in.rs  poly_slice.rs  poly_slice_in.rs  polyslice.rs  series.rs  series_in.rs  series_slice.rs  series_slice_in.rs  slice.rs  traits.rs  util.rs  zero_ref.rs
src/series/: mod.rs  ops.rs
