[package]
name = "series"
version = "0.7.1"
authors = ["Andreas Maier <andreas.martin.maier@desy.de>"]
edition = "2018"
description = "Laurent series in a single variable"
license = "GPL-3.0-or-later"
readme = "Readme.md"
keywords = ["math", "algebra"]
categories = ["science"]
repository = "https://github.com/a-maier/series-rust"

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"] }
num-traits = "0.2"
log = "0.4"

[dev-dependencies]
env_logger = "0.9"
criterion = "0.3"
rand = "0.8"
rand_pcg = "0.3"
lazy_static = "1.3"
rug = "1.5"

[[bench]]
name = "benchmarks"
harness = false
