[package]
name = "series"
version = "0.12.0"
authors = ["Andreas Maier <andreas.martin.maier@desy.de>"]
edition = "2021"
description = "Laurent series in a single variable"
license = "GPL-3.0-or-later"
readme = "Readme.md"
keywords = ["math", "algebra"]
categories = ["science"]
repository = "https://github.com/a-maier/series-rust"

[dependencies]
elsa = "1.10"
log = "0.4"
num-traits = "0.2"
serde = { version = "1.0", optional = true, features = ["derive"] }

[dev-dependencies]
criterion = "0.5"
env_logger = "0.11"
rand = "0.8"
rand_pcg = "0.3"
rug = "1.5"

[[bench]]
name = "benchmarks"
harness = false
